Move all of the functions in ffs_subr.c that are only used by the ufs kernel module from that file into ffs_vfsops.c.  This fixes the build for kernel configs that don't include FFS.

PR:		247256
Submitted by:	glebius
Reviewed by:	mckusick (earlier version)
Sponsored by:	Netflix
Differential Revision:	https://reviews.freebsd.org/D25285